# qubox

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  question.md  security.md
.github/workflows/: ci.yml  deploy-signaling-server.yml  dev-sign.yml  mirror-to-private.yml  publish-signaling-ghcr.yml  release.yml  turn-soak.yml
apps/qubox-client-cli/: Cargo.toml  build.rs
apps/qubox-client-cli/src/: blank_overlay.rs  decoder_hw.rs  filesync_session.rs  frame_pacing.rs  frame_pipeline.rs  gamepad_capture.rs  lib.rs  main.rs  privacy_indicator.rs  render_wgpu.rs  runtime.rs  stats_overlay.rs  stream_registry.rs  telemetry.rs  tiled_view.rs  winit_app.rs  winit_user_event.rs
apps/qubox-client-cli/src/shaders/: tone_map.wgsl
apps/qubox-client-cli/tests/: stream_registry_e2e.rs
apps/qubox-client-gui/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
apps/qubox-client-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/qubox-client-gui/src-tauri/capabilities/: default.json
apps/qubox-client-gui/src-tauri/src/: lib.rs  main.rs
apps/qubox-daemon/: Cargo.toml  README.md
apps/qubox-daemon/src/: ipc.rs  lib.rs  main.rs  notify.rs  pidfile.rs  service.rs  service_scm.rs  socket_activation.rs  state.rs  subprocess.rs  tuf.rs
apps/qubox-host-agent/: Cargo.toml
apps/qubox-host-agent/src/: browser_audio.rs  capture_orchestrator.rs  enforce.rs  file_sync_sensors.rs  filesync_drain.rs  gamepad.rs  input_inject.rs  input_mapping.rs  main.rs  pairing_ui.rs  permissions.rs  pin.rs  privacy.rs  rate_control.rs  rate_feedback.rs  recovery.rs  screen_capture.rs  toast_policy.rs  turn_local.rs  webrtc_session.rs
apps/qubox-host-agent/tests/: multi_display_e2e.rs  privacy_e2e.rs
apps/qubox-signaling-server/: Cargo.toml  Dockerfile
apps/qubox-signaling-server/src/: enrollment.rs  main.rs  turn.rs
clients/webcodecs/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
crates/qubox-clipboard/: Cargo.toml
crates/qubox-clipboard/src/: hash.rs  lib.rs
crates/qubox-clipboard/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/qubox-display/: Cargo.toml  README.md
crates/qubox-display/src/: coordinates.rs  error.rs  ffmpeg_raw.rs  lib.rs  soft_capture.rs  traits.rs  types.rs
crates/qubox-display/src/dxgi/: README.md  mod.rs
crates/qubox-display/src/pipewire/: README.md  mod.rs
crates/qubox-display/src/screencapturekit/: README.md  mod.rs
crates/qubox-display/src/surface/: linux.rs  macos.rs  mod.rs  windows.rs
crates/qubox-display/src/x11/: capture.rs  coords.rs  enumerate.rs  manager.rs  mod.rs  tests.rs  window.rs
crates/qubox-identity/: Cargo.toml
crates/qubox-identity/src/: lib.rs
crates/qubox-media/: Cargo.toml
crates/qubox-media/src/: encoder_hw.rs  encoder_probe.rs  lib.rs  preset.rs
crates/qubox-media/src/codec/: abr.rs  classifier.rs  hdr.rs  hw_probe.rs  matrix.rs  mod.rs
crates/qubox-media/tests/: test_dxgi_encoder.rs
crates/qubox-mic/: Cargo.toml
crates/qubox-mic/src/: lib.rs  pipeline.rs  reference.rs  ring.rs
crates/qubox-mic/src/platform/: mod.rs
crates/qubox-pen/: Cargo.toml
crates/qubox-pen/src/: coalesce.rs  error.rs  lib.rs  linux.rs  macos.rs  platform.rs  traits.rs  windows.rs
crates/qubox-platform/: Cargo.toml
crates/qubox-proto/: Cargo.toml
crates/qubox-proto/benches/: rkyv_vs_json.rs
crates/qubox-proto/src/: coalescer.rs  lib.rs  pen.rs  rkyv_wire.rs
crates/qubox-proto/src/wire/: mod.rs  negotiate.rs
crates/qubox-rl-policy/: Cargo.toml  build.rs
crates/qubox-rl-policy/src/: action.rs  lib.rs  model.rs  observation.rs  reward.rs
crates/qubox-signaling/: Cargo.toml
crates/qubox-signaling/src/: cluster.rs  jti_cache.rs  jwks.rs  lib.rs  webtransport.rs
crates/qubox-sync/: Cargo.toml
crates/qubox-transport/: Cargo.toml
crates/qubox-transport/examples/: rs_fec_demo.rs
crates/qubox-transport/src/: filesync.rs  lib.rs  turn.rs
crates/qubox-transport/src/congestion/: bbr.rs  legacy.rs  mod.rs  occ.rs  router.rs  scream.rs  telemetry.rs  trait_def.rs
crates/qubox-transport/src/media/: fec_decoder.rs  mod.rs  roi.rs  rs_fec.rs
crates/qubox-transport/src/pacing/: mod.rs  pacer.rs  schedule.rs
crates/qubox-webtransport/: Cargo.toml
crates/qubox-webtransport/src/: cert.rs  config.rs  lib.rs  server.rs  session.rs  tests.rs
docs/: SELF_HOSTING.md  architecture.md  code-review-connections-parsing-algorithms.md  critical-architectural-review.md  gap-inventory-closed.md  maturity-non-mobile.md  parsec-coverage.md  platforms.md  product-gaps.md  production-readiness.md  security-hardening.md  test-coverage-gaps.md  tuf.md  usb-passthrough.md  user-guide-file-sync.md  win-linux-media-closeout.md
docs/adr/: 002-target-architecture-and-upgrade-strategy.md  004-virtual-gamepad-uinput-vigembus.md  005-daemon-and-turn-architecture.md  006-daemon-delegation.md  007-unified-display-capture-and-virtualization.md  010-high-fidelity-and-release.md  011-quic-v2-ack-frequency.md  014-reed-solomon-fec-keyframes.md  018-codec-selection-matrix.md  021-dual-mode-control-plane.md  022-context-aware-file-sync.md
docs/operations/: coturn-deploy.md  turn-soak.md
ops/: README.md
ops/coturn/: Dockerfile  docker-compose.yml  turnserver.conf
ops/local/: README.md  connect-cloud.sh  connect.sh  list-hosts.sh  start-signaling.sh  vm-sync.sh
ops/self-host/: Caddyfile  README.md  docker-compose.yml
ops/signing/: README.md  build-release.sh  sign-linux.sh  sign-macos.sh  sign-windows.ps1  test-sign-linux-dry-run.sh
ops/vm-lab/: README.md  virtualbox-jammy-cloud.ps1
research/decisions/: ADR-001-transport-research-baseline.md  ADR-003-ffmpeg-next-decoder.md  ADR-008-clipboard-mic-sync.md  ADR-009-hw-decode-wgpu-pipeline.md  ADR-012-congestion-control-v2.md  ADR-013-frame-aware-pacing.md  (+7 more)
scripts/: install-host-agent.sh  patch_win_linux_media.py
(+78 files in other folders)
