[workspace]
members = [
    "crates/qubox-clipboard",
    "crates/qubox-display",
    "crates/qubox-identity",
    "crates/qubox-media",
    "crates/qubox-mic",
    "crates/qubox-pen",
    "crates/qubox-platform",
    "crates/qubox-proto",
    "crates/qubox-rl-policy",
    "crates/qubox-signaling",
    "crates/qubox-transport",
    "crates/qubox-webtransport",
    "crates/qubox-sync",
    "apps/qubox-signaling-server",
    "apps/qubox-host-agent",
    "apps/qubox-client-cli",
    "apps/qubox-client-gui/src-tauri",
    "apps/qubox-daemon",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.5"
license = "AGPL-3.0-or-later"
repository = "https://github.com/MegaPanchamZ/qubox"

[workspace.dependencies]
anyhow = "1.0"
arboard = "3.6"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
blake3 = "1.8"
clap = { version = "4.5", features = ["derive", "env"] }
cpal = "0.17"
dasp = "0.11"
enigo = "0.6"
futures = "0.3"
libspa = "0.10"
minifb = "0.27"
nnnoiseless = "0.5"
opus = "0.3"
pipewire = "0.10"
png = "0.18"
quinn = "0.11"
rcgen = "0.13"
raw-window-handle = "0.6"
softbuffer = "0.4"
winit = "0.29"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
webrtc-audio-processing = { version = "0.3", features = ["bundled"] }
bitflags = "2"
byteorder = "1"
# P0 trust rewrite: Ed25519 for `DeviceIdentity` + `SignedHello`.
ed25519-dalek = { version = "2.1", default-features = false, features = ["fast", "std", "zeroize", "rand_core"] }
hmac = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"

# P1 identity hardening: encrypt the Ed25519 private key at rest.
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
hex = "0.4"

# P0-6 gamepad
gilrs = "0.11"
uinput = "0.1"

# P0-3 + P0-5: zero-copy GPU presentation (wgpu + HW decoder substrate).
# wgpu 23: Vulkan & GLES are always enabled on Linux/Windows/Android;
# DX12 always on Windows; Metal always on macOS. We only need WGSL.
wgpu = { version = "23", default-features = false, features = ["wgsl"] }
wgpu_glyph = "0.23"
pollster = "0.3"
crossbeam-channel = "0.5"

# ADR-015: zero-copy serialization
rkyv = { version = "0.8.17", default-features = false, features = ["std", "bytecheck", "little_endian", "unaligned", "pointer_width_32"] }
bytecheck = { version = "0.8.2" }
rancor = { version = "0.1.2", default-features = false, features = ["alloc"] }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
