[package]
name = "qubox-host-agent"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
qubox-daemon = { path = "../qubox-daemon" }
qubox-clipboard = { path = "../../crates/qubox-clipboard" }
qubox-display = { path = "../../crates/qubox-display" }
qubox-identity = { path = "../../crates/qubox-identity" }
qubox-media = { path = "../../crates/qubox-media" }
qubox-rl-policy = { path = "../../crates/qubox-rl-policy", optional = true }
# WebRTC APM (echo cancel) needs autotools on Windows — enable only off-Windows.
qubox-mic = { path = "../../crates/qubox-mic", default-features = false }
qubox-pen = { path = "../../crates/qubox-pen" }
qubox-platform = { path = "../../crates/qubox-platform" }
qubox-proto = { path = "../../crates/qubox-proto" }
qubox-transport = { path = "../../crates/qubox-transport" }
qubox-sync = { path = "../../crates/qubox-sync" }
directories = "5"
bytes = "1"
clap.workspace = true
cpal.workspace = true
enigo.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "2"
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
rustls = { workspace = true }
axum.workspace = true
sysinfo = { version = "0.33", optional = true }
notify = { version = "7", optional = true }
notify-debouncer-mini = { version = "0.5", optional = true }
# P0-6 gamepad — Linux uinput backend. Non-optional on Linux;
# on Windows/macOS the gamepad.rs code is #[cfg]-gated to a no-op
# stub (Windows ViGEmBus deferred to v2 per ADR-004).
[target.'cfg(target_os = "linux")'.dependencies]
uinput = "0.1"

[features]
default = ["mic-apm"]
# Echo cancel / AGC via webrtc-audio-processing (not default on Windows CI).
mic-apm = ["qubox-mic/webrtc-apm"]
rl-abr = ["qubox-rl-policy"]
file-sync = ["dep:sysinfo", "dep:notify", "dep:notify-debouncer-mini"]

# Pin windows-sys for MSVC builds: 0.61.x + rustc 1.97 can trip
# STATUS_STACK_BUFFER_OVERRUN (0xc0000409) on the WDK feature matrix.
# See ops/local/README.md.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.59.0" }

