[package]
name = "qubox-signaling-server"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
qubox-proto = { path = "../../crates/qubox-proto" }
qubox-signaling = { path = "../../crates/qubox-signaling" }
clap.workspace = true
hmac = "0.12"
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1 = "0.10"
sha2 = "0.10"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true