[package]
name = "qubox-identity"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
qubox-proto = { path = "../qubox-proto" }
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
uuid.workspace = true
zeroize.workspace = true