[package]
name = "qubox-mic"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
qubox-proto = { path = "../qubox-proto" }
qubox-transport = { path = "../qubox-transport" }
bytes = "1"
cpal.workspace = true
dasp.workspace = true
nnnoiseless.workspace = true
opus.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
tracing.workspace = true
webrtc-audio-processing = { workspace = true, optional = true }
webrtc-audio-processing-sys = { version = "0.3", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = { workspace = true, optional = true }
libspa = { workspace = true, optional = true }

[features]
# Default off on Windows (bundled webrtc APM needs autotools/cmake).
# Enabled by default for non-Windows via dependent crates / CI.
default = []
webrtc-apm = ["dep:webrtc-audio-processing", "dep:webrtc-audio-processing-sys"]
ns-rnnoise = []
pipewire-virtual-source = ["dep:pipewire", "dep:libspa"]
