[package]
name = "qubox-pen"
version.workspace = true
edition.workspace = true

[dependencies]
qubox-proto = { path = "../qubox-proto" }
crossbeam-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "2"
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libinput = { version = "0.7", optional = true, package = "input" }
uinput = { version = "0.1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_TabletPC", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_Pointer"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.5", optional = true }
objc2-foundation = { version = "0.2", optional = true }
objc2-app-kit = { version = "0.2", optional = true }

[features]
default = []
libinput = ["dep:libinput"]
uinput = ["dep:uinput"]
nsevent = ["dep:objc2", "dep:objc2-foundation", "dep:objc2-app-kit"]