[package]
name = "qubox-proto"
edition.workspace = true
version.workspace = true

[features]
default = ["wire-json-v1"]
wire-json-v1 = []
wire-rkyv-v2 = ["dep:rkyv", "dep:bytecheck", "dep:rancor"]

[[bench]]
name = "rkyv_vs_json"
harness = false

[dependencies]
base64.workspace = true
bitflags.workspace = true
ed25519-dalek.workspace = true
hmac = "0.12"
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
uuid.workspace = true
rkyv = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "unaligned", "pointer_width_32"], optional = true }
bytecheck = { version = "0.8", optional = true }
rancor = { version = "0.1", default-features = false, features = ["alloc"], optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("wire-rkyv-v2", "wire-json-v1"))'] }

[dev-dependencies]
serde_json.workspace = true
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
