[package]
name = "qubox-rl-policy"
edition.workspace = true
version.workspace = true

[dependencies]
candle-core = "0.11.0"
candle-nn = "0.11.0"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode = "1.3"
rkyv = { version = "0.7", optional = true }

[features]
default = []
rkyv = ["dep:rkyv"]

[build-dependencies]
serde.workspace = true
serde_json.workspace = true
