[package]
name = "qubox-signaling"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
qubox-proto = { path = "../qubox-proto" }
ed25519-dalek.workspace = true
futures.workspace = true
hex.workspace = true
hmac = "0.12"
rand_core.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
# redis 0.27 connection-manager uses arc_swap but does not always re-export it
arc-swap = "1"

# WebTransport browser client (ADR-017)
qubox-webtransport = { path = "../qubox-webtransport", optional = true }

[features]
webtransport = ["dep:qubox-webtransport"]
default = ["webtransport"]

[dev-dependencies]
tower.workspace = true