[package]
name = "qubox-client-gui"
version.workspace = true
description = "Qubox desktop client (Tauri shell)"
authors = ["Qubox contributors"]
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qubox_client_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
qubox-daemon = { path = "../../qubox-daemon" }
qubox-sync = { path = "../../../crates/qubox-sync" }
qubox-identity = { path = "../../../crates/qubox-identity" }
qubox-proto = { path = "../../../crates/qubox-proto" }
qubox-signaling = { path = "../../../crates/qubox-signaling" }
qubox-transport = { path = "../../../crates/qubox-transport" }
# GUI links client-cli as a library (telemetry types / launch helpers).
# Sidecar binary is bundled separately; skip webrtc APM in the GUI crate graph.
qubox-client-cli = { path = "../../qubox-client-cli", default-features = false }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
directories = "5"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
hex.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(windows)'.dependencies]
interprocess = { version = "2.4", features = ["tokio"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["socket", "user", "signal"] }
